--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>Awesome game</title>
 </head>
 
+
 <body class="main">
-    <section class="welcome">
+    <!-- <section class="welcome">
         <h1>Welcome</h1>
         <h3>Chose a level</h3>
         <div class="welcome__buttons">
@@ -18,11 +19,54 @@
             <button class="welcome__level2">Medium</button>
             <button class="welcome__level3">Expert</button>
         </div>
-    </section>
+    </section> -->
+
+
     <section class="gameSection">
 
+        <h2 class="gameSection__score">Youre score: <span id="gameSection__result"> result</span></h2>
+        <div class="gameSection__playGround">
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./molebody.png" alt="mole" class="mole"> -->
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+            <div class="gameSection__playGroundSection">
+                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+            </div>
+        </div>
+
+
+        <button id="gameSection__startButton">START</button>
+
+
+
 
     </section>
+
+    <div id="malet"></div>
+
     <script src="./index.js"></script>
 </body>
 
