reset and start button added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <div class="gameSection__playGroundSection">
                 <!-- <img src="./molebody.png" alt="mole" class="mole"> -->
                 <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
-
             </div>
             <div class="gameSection__playGroundSection">
                 <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
@@ -56,14 +55,11 @@
                 <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
             </div>
         </div>
-
-
-        <button id="gameSection__startButton">START</button>
-
-
-
-
     </section>
+    <div class="buttons">
+        <button id="gameSection__startButton">START</button>
+        <button id="gameSection__resetButton">RESET</button>
+    </div>
 
     <div id="malet"></div>
 
