--- a/index.html
+++ b/index.html
@@ -27,32 +27,31 @@
         <h2 class="gameSection__score">Youre score: <span id="gameSection__result"> result</span></h2>
         <div class="gameSection__playGround">
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./molebody.png" alt="mole" class="mole"> -->
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
             <div class="gameSection__playGroundSection">
-                <!-- <img src="./mole.png" width=120px hight=120px alt="molehill" class="gameSection__molehill"> -->
+
             </div>
         </div>
     </section>
@@ -61,7 +60,7 @@
         <button id="gameSection__resetButton">RESET</button>
     </div>
 
-    <div id="malet"></div>
+    <div class="malet"></div>
 
     <script src="./index.js"></script>
 </body>
