--- a/index.html
+++ b/index.html
@@ -11,56 +11,46 @@
 
 
 <body class="main">
-    <!-- <section class="welcome">
-        <h1>Welcome</h1>
-        <h3>Chose a level</h3>
-        <div class="welcome__buttons">
-            <button class="welcome__level1">Beginer</button>
-            <button class="welcome__level2">Medium</button>
-            <button class="welcome__level3">Expert</button>
+
+
+    <section class="welcome">
+        <div class="welcome__container">
+            <h1>Welcome</h1>
+            <h3>Chose a level</h3>
+            <div class="welcome__buttons">
+                <button class="welcome__level">Beginer</button>
+                <button class="welcome__level">Medium</button>
+                <button class="welcome__level">Expert</button>
+            </div>
         </div>
-    </section> -->
+        <div class="molepicture">
+            <img src="./mole.png" alt="mole" class="welcome__mole">
+        </div>
+    </section>
 
 
-    <section class="gameSection">
+    <div class="gameSection">
 
         <h2 class="gameSection__score">Youre score: <span id="gameSection__result"> result</span></h2>
         <div class="gameSection__playGround">
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
-            <div class="gameSection__playGroundSection">
-
-            </div>
+            <div class="gameSection__playGroundSection"> </div>
+            <div class="gameSection__playGroundSection"> </div>
+            <div class="gameSection__playGroundSection"> </div>
+            <div class="gameSection__playGroundSection"></div>
+            <div class="gameSection__playGroundSection"> </div>
+            <div class="gameSection__playGroundSection"></div>
+            <div class="gameSection__playGroundSection"></div>
+            <div class="gameSection__playGroundSection"></div>
+            <div class="gameSection__playGroundSection"></div>
         </div>
-    </section>
+    </div>
     <div class="buttons">
         <button id="gameSection__startButton">START</button>
         <button id="gameSection__resetButton">RESET</button>
+        <button id="gameSection__mainButton">GO BACK</button>
     </div>
 
-    <div class="malet"></div>
+    <!-- <div class="malet"></div> -->
 
     <script src="./index.js"></script>
 </body>
