--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 
     <div class="gameSection">
-
-        <h2 class="gameSection__score">Youre score: <span id="gameSection__result"> result</span></h2>
+        <h3 class="gameSection__timer">Time left: <span id="timer"></span></h3>
+        <h2 class="gameSection__score">Your score: <span id="gameSection__result"></span></h2>
         <div class="gameSection__playGround">
             <div class="gameSection__playGroundSection"> </div>
             <div class="gameSection__playGroundSection"> </div>
@@ -50,6 +50,15 @@
         <button id="gameSection__mainButton">GO BACK</button>
     </div>
 
+    <section class="gameoverSection">
+
+        <h2 class="gameoverSection__h2">WELL DONE!</h2>
+        <h3 class="gameoverSection__yourScore">YOUR SCORE </h3>
+        <div class="gameoverSection__score"></div>
+        <button class="gameoverSection__retry-button">GO AGAIN!</button>
+
+
+    </section>
     <!-- <div class="malet"></div> -->
 
     <script src="./index.js"></script>
