--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <section class="welcome">
         <div class="welcome__container">
-            <h1>Welcome</h1>
-            <h3>Chose a level</h3>
+            <h1>Welcome to</h1>
+            <h3>Whac-A-Mole-Game</h3>
             <div class="welcome__buttons">
                 <button class="welcome__level">Beginer</button>
                 <button class="welcome__level">Medium</button>
@@ -59,7 +59,7 @@
 
 
     </section>
-    <!-- <div class="malet"></div> -->
+
 
     <script src="./index.js"></script>
 </body>
