picture file created

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <div class="molepicture">
-            <img src="./mole.png" alt="mole" class="welcome__mole">
+            <img src="./pictures/mole.png" alt="mole" class="welcome__mole">
         </div>
     </section>
 
