--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>Welcome to</h1>
             <h3>Whac-A-Mole-Game</h3>
             <div class="welcome__buttons">
-                <button class="welcome__level">Beginer</button>
+                <button class="welcome__level">Beginner</button>
                 <button class="welcome__level">Medium</button>
                 <button class="welcome__level">Expert</button>
             </div>
@@ -33,15 +33,15 @@
         <h3 class="gameSection__timer">Time left: <span id="timer"></span></h3>
         <h2 class="gameSection__score">Your score: <span id="gameSection__result"></span></h2>
         <div class="gameSection__playGround">
-            <div class="gameSection__playGroundSection"> </div>
-            <div class="gameSection__playGroundSection"> </div>
-            <div class="gameSection__playGroundSection"> </div>
-            <div class="gameSection__playGroundSection"></div>
-            <div class="gameSection__playGroundSection"> </div>
-            <div class="gameSection__playGroundSection"></div>
-            <div class="gameSection__playGroundSection"></div>
-            <div class="gameSection__playGroundSection"></div>
-            <div class="gameSection__playGroundSection"></div>
+            <div class="gameSection__playGroundGrid"> </div>
+            <div class="gameSection__playGroundGrid"> </div>
+            <div class="gameSection__playGroundGrid"> </div>
+            <div class="gameSection__playGroundGrid"></div>
+            <div class="gameSection__playGroundGrid"> </div>
+            <div class="gameSection__playGroundGrid"></div>
+            <div class="gameSection__playGroundGrid"></div>
+            <div class="gameSection__playGroundGrid"></div>
+            <div class="gameSection__playGroundGrid"></div>
         </div>
 
         <div class="buttons">
